--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <title>Artihand</title>
   </head>
   <body>
-    <noscript>Welcom to Artihand</noscript>
+    <noscript>You need to enable JavaScript to run this app</noscript>
     <div id="root"></div>
   </body>
 </html>
